tests/invalid/multiply_star.err_exp
multiply_star.m:031: In clause for predicate `p'/2:
multiply_star.m:031:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`*'/2.[39;49m
multiply_star.m:031:   In Mercury, if you want to invoke an arithmetic
multiply_star.m:031:   operation such as [38;5;87m`*',[39;49m then you must import a module
multiply_star.m:031:   that exports that operation. The modules in the Mercury
multiply_star.m:031:   standard library that do so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their
multiply_star.m:031:   sized versions (such as [38;5;87m`int8'[39;49m and [38;5;87m`uint16'[39;49m), as well as
multiply_star.m:031:   [38;5;87m`integer'[39;49m and [38;5;87m`float'.[39;49m However, [38;5;226mnone of those modules[39;49m
multiply_star.m:031:   [38;5;226mhave `:- import_module' declarations.[39;49m
